--- a/Devel_Notebook5.ipynb
+++ b/Devel_Notebook5.ipynb
@@ -28,40 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "mount the drive containing the lmp executable"
-      ],
-      "metadata": {
-        "id": "cOQqmu5kvWU-"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd /content"
-      ],
-      "metadata": {
-        "id": "iySl0UFDtYAd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.flush_and_unmount\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "pPNDb85lXltf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "next, some initialization"
+        "first, initialize libraries"
       ],
       "metadata": {
         "id": "-SZiMDjdvQAy"
@@ -84,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "loads a linux terminal"
+        "loads a linux xterm"
       ],
       "metadata": {
         "id": "HqboiyGJg24r"
@@ -123,12 +90,44 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!echo $PATH"
+        "mount your Google Drive containing the LAMMPS application and the LAMMPS scripts (assumes you have run the initialization notebook!)"
       ],
       "metadata": {
-        "id": "RPQwKdJyOPDG"
+        "id": "OOPJ-NvzacWv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.flush_and_unmount\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "pPNDb85lXltf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "update the LAMMPS scripts"
+      ],
+      "metadata": {
+        "id": "VXi4RY6OZn79"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/drive/MyDrive/Chrom2023\n",
+        "!git pull https://github.com/BKFC90/Chrom2023"
+      ],
+      "metadata": {
+        "id": "6CCVH1HbWcGD"
       },
       "execution_count": null,
       "outputs": []
@@ -136,10 +135,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!ls /content/drive/MyDrive/Chrom2023"
+        "!echo $PATH"
       ],
       "metadata": {
-        "id": "hPNOSF3VqKAm"
+        "id": "RPQwKdJyOPDG"
       },
       "execution_count": null,
       "outputs": []
@@ -301,24 +300,14 @@
     {
       "cell_type": "code",
       "source": [
-        "def d2_v():\n",
-        "    # Input video path\n",
-        "    save_path = \"movie.mp4\"\n",
-        "\n",
-        "    # Compressed video path\n",
-        "    compressed_path = \"result_compressed.mp4\"\n",
-        "\n",
-        "    os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "\n",
-        "    # Show video\n",
-        "    mp4 = open(compressed_path,'rb').read()\n",
-        "    data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
-        "    HTML(\"\"\"\n",
-        "    <video width=400 controls>\n",
-        "    <source src=\"%s\" type=\"video/mp4\">\n",
-        "    </video>\n",
-        "    \"\"\" % data_url)\n",
-        "    return\n"
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "HTML(\"\"\"\n",
+        "<video width=400 controls>\n",
+        "      <source src=\"%s\" type=\"video/mp4\">\n",
+        "</video>\n",
+        "\"\"\" % data_url)"
       ],
       "metadata": {
         "id": "Kt61XVIF5fd4"
@@ -420,10 +409,8 @@
     {
       "cell_type": "code",
       "source": [
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/LJ2/movie.mp4\"\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/LJ2/result_compressed.mp4\"\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
         "<video width=400 controls>\n",
@@ -433,26 +420,6 @@
       ],
       "metadata": {
         "id": "nzICjXX1VHxc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/LJ2/movie.mp4\"\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/LJ2/result_compressed.mp4\"\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
-        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
-        "HTML(\"\"\"\n",
-        "<video width=400 controls>\n",
-        "      <source src=\"%s\" type=\"video/mp4\">\n",
-        "</video>\n",
-        "\"\"\" % data_url)"
-      ],
-      "metadata": {
-        "id": "i1-BAkw0UiJu"
       },
       "execution_count": null,
       "outputs": []
@@ -491,16 +458,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Input video path\n",
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly1/movie.mp4\"\n",
-        "\n",
-        "# Compressed video path\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly1/result_compressed.mp4\"\n",
-        "\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "\n",
-        "# Show video\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
         "<video width=400 controls>\n",
@@ -548,10 +507,8 @@
     {
       "cell_type": "code",
       "source": [
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly2/movie.mp4\"\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly2/result_compressed.mp4\"\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
         "<video width=400 controls>\n",
@@ -599,10 +556,8 @@
     {
       "cell_type": "code",
       "source": [
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly3/movie.mp4\"\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Examples/Poly3/result_compressed.mp4\"\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
         "<video width=400 controls>\n",
