--- a/Devel_Notebook5.ipynb
+++ b/Devel_Notebook5.ipynb
@@ -38,6 +38,7 @@
       "cell_type": "code",
       "source": [
         "from IPython.display import HTML\n",
+        "from IPython.display import Image\n",
         "from base64 import b64encode\n",
         "import os\n",
         "from pathlib import Path"
@@ -240,6 +241,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "display the video"
+      ],
+      "metadata": {
+        "id": "OpeJhe620m9R"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# display the video\n",
@@ -253,6 +263,26 @@
       ],
       "metadata": {
         "id": "su4Dzp2W087l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "display a still image"
+      ],
+      "metadata": {
+        "id": "AMogy-vm0tJK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image('100000.jpg')"
+      ],
+      "metadata": {
+        "id": "zDooHZnU0x-b"
       },
       "execution_count": null,
       "outputs": []
@@ -574,7 +604,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Exampls Chrom1"
+        "show a slow motion video of early times"
+      ],
+      "metadata": {
+        "id": "bysCbd3y1vlC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# display the video\n",
+        "mp4 = open('movie-slow.mp4','rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "HTML(\"\"\"\n",
+        "<video width=400 controls>\n",
+        "      <source src=\"%s\" type=\"video/mp4\">\n",
+        "</video>\n",
+        "\"\"\" % data_url)"
+      ],
+      "metadata": {
+        "id": "7AXnElLQ1psD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example Chrom1"
       ],
       "metadata": {
         "id": "K4k_HxDGjclk"
