--- a/Devel_Notebook5.ipynb
+++ b/Devel_Notebook5.ipynb
@@ -270,26 +270,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "display a still image"
-      ],
-      "metadata": {
-        "id": "AMogy-vm0tJK"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Image('100000.jpg')"
-      ],
-      "metadata": {
-        "id": "zDooHZnU0x-b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "now go to next example (3body)"
       ],
       "metadata": {
@@ -348,7 +328,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Before moving to next example, double-click on the file in.lmp in the left-hand panel for 3body, comment out the line \"fix W all...\", go back and re-run lmp and the video visualization"
+        "Before moving to next example, double-click on the file in.lmp in the left-hand panel for 3B and edit it 'live' in the right-hand panel that appears:"
       ],
       "metadata": {
         "id": "Cw1SbgnTTU72"
@@ -357,10 +337,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example LJ1"
+        "1. Deliberately change 'units' to 'unts' or 'lj' to \"LJ\", go back and run the !lmp cell and observe the output.\n",
+        "\n",
+        "2. Comment out the line \"fix W all...\", go back and re-run lmp and the video."
       ],
       "metadata": {
-        "id": "ewywi7LAiwPx"
+        "id": "HEkQKmGOp1AC"
       }
     },
     {
