--- a/Sofia2023_Setup_4.ipynb
+++ b/Sofia2023_Setup_4.ipynb
@@ -28,14 +28,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is the installation script for the class on LAMMPS.  It will\n",
+        "This is the installation notebook for the class on LAMMPS.  It will\n",
         "\n",
         "\n",
         "*   Get the Examples folder from GitHub\n",
         "*   Get the LLAMPS source tree from GitHub\n",
         "*   Build LAMMPS\n",
         "*   Copy LAMMPS and the Examples to your Google Drive\n",
-        "*   You can 'run' each cell individually, or all of   them via Runtime->Run All in the menu\n",
+        "*   *The fastest way to complete this script is to run all cells by selecting Runtime->Run All in the menu above.*\n",
+        "*   You can 'run' each cell individually by clicking on the circle with the arrow to the left of the cell - not required for this notebook but will be the preferred method in the second notebook.\n",
         "\n",
         "\n",
         "\n"
