--- a/Sofia2023_Setup.ipynb
+++ b/Sofia2023_Setup.ipynb
@@ -28,6 +28,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "If you arrived at this page by clicking on the GitHub link, proceed to Google Colaboratory by clicking the button:\n",
+        "\n",
+        "          Go to Colab\n",
+        "\n",
+        "\n",
         "This is the installation notebook for the class on LAMMPS.  It will\n",
         "\n",
         "\n",
