--- a/Sofia2023_Setup.ipynb
+++ b/Sofia2023_Setup.ipynb
@@ -28,13 +28,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If you arrived at this page by clicking on the GitHub link, proceed to Google Colaboratory by clicking the button:\n",
+        "If you arrived at this page by clicking the GitHub link, proceed to Google Colaboratory with this notebook by clicking the button\n",
         "\n",
-        "          Go to Colab\n",
-        "\n",
-        "\n",
+        "          Open in Colab\n",
+        "          \n",
         "This is the installation notebook for the class on LAMMPS.  It will\n",
-        "\n",
         "\n",
         "*   Get the Examples folder from GitHub\n",
         "*   Get the LLAMPS source tree from GitHub\n",
