--- a/Sofia2023_Examples.ipynb
+++ b/Sofia2023_Examples.ipynb
@@ -30,7 +30,9 @@
       "source": [
         "Following initialization using the previous notebook (Sofia2023_Setup), this is the primary notebook for the class.  After some startup exercises, the notebook proceeds through the examples, which contain LAMMPS scripts in increasing levels of complexity.\n",
         "\n",
-        "For this notebook, you are encouraged to run the successive cells in parallel with the lecture."
+        "For this notebook, go ahead and run the cells until you reach \"LECTURE BEGINS HERE\" after which you are encouraged to run the successive cells in parallel with the lecture.\n",
+        "\n",
+        "Click \"Open in Colab\" to begin."
       ],
       "metadata": {
         "id": "vSAKp_dK8u3P"
@@ -209,6 +211,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**************************\n",
+        "LECTURE BEGINS HERE\n",
+        "**************************"
+      ],
+      "metadata": {
+        "id": "b29q0xS7c2Jx"
+      }
     },
     {
       "cell_type": "markdown",
