--- a/Sofia2023_Examples.ipynb
+++ b/Sofia2023_Examples.ipynb
@@ -4,6 +4,16 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "NOfAOqLVOMt9",
+        "J5EdiKglTIHp",
+        "sRLVu_iAOhHs",
+        "bsEQiez7i8c1",
+        "vifVlZLkjC_l",
+        "o_uZgltgjLXE",
+        "K4k_HxDGjclk",
+        "HiYLb-QHO0GK"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +38,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Following initialization using the previous notebook (Sofia2023_Setup), this is the primary notebook for the class.  After some startup exercises, the notebook proceeds through the examples, which contain LAMMPS scripts in increasing levels of complexity.\n",
+        "Following initialization using the previous notebook (Sofia2023_Setup - you must do this first!), this is the primary notebook for the class.  After some startup exercises, the notebook proceeds through the examples, which contain LAMMPS scripts in increasing levels of complexity.\n",
         "\n",
-        "For this notebook, go ahead and run the cells until you reach \"LECTURE BEGINS HERE\" after which you are encouraged to run the successive cells in parallel with the lecture.\n",
+        "For this notebook, go ahead and run the cells under \"Preliminaries\" until you reach \"LECTURE BEGINS HERE\" after which you are encouraged to run the successive cells in parallel with the lecture.\n",
         "\n",
         "Click \"Open in Colab\" to begin."
       ],
       "metadata": {
         "id": "vSAKp_dK8u3P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Preliminaries"
+      ],
+      "metadata": {
+        "id": "Y58sMqt_N0NC"
       }
     },
     {
@@ -86,7 +105,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This does not work in all cases, but at any time you wish to use it, run the following cell (uncomment the command):"
+        "This does not work in all cases, but at any time you wish to try it, run the following cell (remove the '#' to uncomment the command):"
       ],
       "metadata": {
         "id": "u19a2annhZKE"
@@ -226,6 +245,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Examples"
+      ],
+      "metadata": {
+        "id": "jo9Mp03SOFVa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2-Body"
+      ],
+      "metadata": {
+        "id": "NOfAOqLVOMt9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "We come to the first example; change to 2B folder"
       ],
       "metadata": {
@@ -293,7 +330,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "now go to next example (3body)"
+        "## 3-Body"
       ],
       "metadata": {
         "id": "J5EdiKglTIHp"
@@ -369,6 +406,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## LJ1"
+      ],
+      "metadata": {
+        "id": "sRLVu_iAOhHs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%cd /content/drive/MyDrive/Chrom2023/Sofia_Scripts/LJ1"
@@ -413,7 +459,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example LJ2"
+        "## LJ2"
       ],
       "metadata": {
         "id": "bsEQiez7i8c1"
@@ -496,7 +542,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example Poly1"
+        "## Poly1"
       ],
       "metadata": {
         "id": "vifVlZLkjC_l"
@@ -545,7 +591,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example Poly2"
+        "## Poly2"
       ],
       "metadata": {
         "id": "o_uZgltgjLXE"
@@ -661,7 +707,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example Chrom1"
+        "## Chrom1"
       ],
       "metadata": {
         "id": "K4k_HxDGjclk"
@@ -719,6 +765,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Wrap-up"
+      ],
+      "metadata": {
+        "id": "HiYLb-QHO0GK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "If you'd like to save these examples to your local Downloads folder, uncomment all the lines in the next cell and run it."
       ],
       "metadata": {
@@ -739,6 +794,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Or at any time you can download individual files from your Google Drive..."
+      ],
+      "metadata": {
+        "id": "CtUbFwhXO9i5"
+      }
     }
   ]
 }
