--- a/Sofia2023_Examples.ipynb
+++ b/Sofia2023_Examples.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "9mB85e8CVlZm",
         "NOfAOqLVOMt9",
         "J5EdiKglTIHp",
         "sRLVu_iAOhHs",
@@ -54,7 +55,7 @@
         "# Preliminaries"
       ],
       "metadata": {
-        "id": "Y58sMqt_N0NC"
+        "id": "9mB85e8CVlZm"
       }
     },
     {
@@ -803,6 +804,15 @@
       "metadata": {
         "id": "CtUbFwhXO9i5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tDFCz9BlV_PE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
