--- a/Sofia2023_Examples.ipynb
+++ b/Sofia2023_Examples.ipynb
@@ -5,16 +5,13 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "9mB85e8CVlZm",
-        "NOfAOqLVOMt9",
-        "J5EdiKglTIHp",
         "sRLVu_iAOhHs",
         "bsEQiez7i8c1",
         "vifVlZLkjC_l",
         "o_uZgltgjLXE",
-        "K4k_HxDGjclk",
-        "HiYLb-QHO0GK"
+        "K4k_HxDGjclk"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,6 +402,35 @@
       "metadata": {
         "id": "HEkQKmGOp1AC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!lmp -in in.wrong.lmp"
+      ],
+      "metadata": {
+        "id": "Khn_72PuV9cV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# display the video\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "HTML(\"\"\"\n",
+        "<video width=400 controls>\n",
+        "      <source src=\"%s\" type=\"video/mp4\">\n",
+        "</video>\n",
+        "\"\"\" % data_url)"
+      ],
+      "metadata": {
+        "id": "w7vJ0K-XWIVo"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -804,15 +830,6 @@
       "metadata": {
         "id": "CtUbFwhXO9i5"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tDFCz9BlV_PE"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
