--- a/Sofia2023_Setup.ipynb
+++ b/Sofia2023_Setup.ipynb
@@ -38,7 +38,7 @@
         "*   Get the LLAMPS source tree from GitHub\n",
         "*   Build LAMMPS\n",
         "*   Copy LAMMPS and the Examples to your Google Drive\n",
-        "*   *The fastest way to complete this script is to run all cells by selecting Runtime->Run All in the menu above.*\n",
+        "*   *The fastest way to complete this script is to run all cells by (1) clicking the cell button below \"Run the installation\" below, or (2) selecting Runtime->Run All in the menu above.*\n",
         "*   You can 'run' each cell individually by clicking on the circle with the arrow to the left of the cell - not required for this notebook but will be the preferred method in the second notebook.\n",
         "\n",
         "\n",
@@ -46,6 +46,15 @@
       ],
       "metadata": {
         "id": "4NG0HERNOLMe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Run the installation\n"
+      ],
+      "metadata": {
+        "id": "jI4phfGp8dt-"
       }
     },
     {
