--- a/Sofia2023_Examples.ipynb
+++ b/Sofia2023_Examples.ipynb
@@ -311,6 +311,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -369,6 +371,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -418,6 +422,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -466,10 +472,10 @@
     {
       "cell_type": "code",
       "source": [
-        "save_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Scripts/LJ1/movie.mp4\"\n",
-        "compressed_path = \"/content/drive/MyDrive/Chrom2023/Sofia_Scripts/LJ1/result_compressed.mp4\"\n",
-        "os.system(f\"ffmpeg -i {save_path} -vcodec libx264 {compressed_path}\")\n",
-        "mp4 = open(compressed_path,'rb').read()\n",
+        "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
+        "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
         "<video width=400 controls>\n",
@@ -518,6 +524,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -601,6 +609,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -650,6 +660,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -677,6 +689,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie-slow.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie-slow.mp4\n",
         "mp4 = open('movie-slow.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
@@ -775,6 +789,8 @@
       "cell_type": "code",
       "source": [
         "# display the video\n",
+        "!ffmpeg -y -v -8 -i movie.mp4 -c:v libx264 -pix_fmt yuv420p -preset medium temp.mp4\n",
+        "!mv temp.mp4 movie.mp4\n",
         "mp4 = open('movie.mp4','rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "HTML(\"\"\"\n",
